--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,12 +14,10 @@
     @apply w-screen m-auto relative left-[calc(-50vw_+_50%)];
   }
   .app-container {
-    @apply m-auto container p-4 lg:max-w-6xl;
+    @apply m-auto p-4 lg:max-w-6xl;
   }
 }
-
-@layer utilities {
-  .disabled {
-    @apply bg-gray-500 text-slate-700;
-  }
+.header-diagonal {
+  background-color: #e6ecf5;
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
