--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,17 @@
 
 @layer base {
   html {
-    font-family: 'Roboto', sans-serif;
+    @apply font-Mulish;
+  }
+  p {
+    @apply font-Mulish;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    @apply font-Nunito;
   }
 }
 
